--- a/style.css
+++ b/style.css
@@ -1,78 +1,88 @@
-html
-{
-  height:100%;
-  margin:0px;
-}
-body
-{
+html {
   height: 100%;
-  margin:0;
+  margin: 0px;
+  overflow: hidden;
 }
-.prompt
-{
-  height:10%;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+
+body {
+  height: 100%;
+  margin: 0px;
+
 }
-.container
-{
-  display:flex;
+
+.prompt {
+  height: 10%;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  display: flex;
   width: 100%;
   height: 50%;
-  border:3px solid white;
-  flex-direction:row;
-  align-items:center;
-  justify-content:center;
-  gap:35%;
-  flex-grow:1;
-}
-.gameboard
-{
-  width:30%;
-  height: 90%;
-  margin:3px;
-  height: 1p
-  border:2px solid white;
-  display:grid;
-  grid-template-rows:repeat(10,minmax(0,20%));
-  grid-template-columns:repeat(10,minmax(0,20%))
-  
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  flex-grow: 1;
 }
 
-.gameboard div
-{
-border:1px solid white;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  font-size: 1rem;
-  color:white;
+.gameboard {
+  width: 30%;
+  height: 90%;
+  margin: 3px;
+
+  border: 2px solid white;
+  display: grid;
+  grid-template-rows: repeat(10, minmax(0, 20%));
+  grid-template-columns: repeat(10, minmax(0, 1fr))
 }
-.icons
-{
+
+.gameboard div {
+  border: 1px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  color: white;
+}
+
+.icons {
   height: 80%;
 }
-.holder
-{
-  position: absolute;
-  height: 40%;
+
+.holder {
+  position: relative;
+  height: 90%;
   width: 30%;
-  border:2px white solid;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-gap:2px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
-.rotate
-{
-  height:20%;
+
+.rotate {
+  height: 20%;
   width: 100%;
 }
-.rotateable
-{
-  height: 80%;
-  width: 10%;
-  border:2px solid green; 
+
+#play,
+#random {
+  font-size: min(30px, 3vh);
+  padding: 0.5rem 1.5rem;
+  position: relative;
+  max-width: 100%;
+  max-height: 40%;
+  text-align: center;
+  box-sizing: border-box;
 }
 
+
+#play:hover,
+#random:hover {
+  color: white;
+  background-color: blue;
+}
